--- a/res/values/my_styles.xml
+++ b/res/values/my_styles.xml
@@ -29,7 +29,7 @@
 
     <!-- TextView -->
     <style name="TextView" parent="WrapContent">
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/mainColor</item>
         <item name="android:textSize">@dimen/tv_normal</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:background">@null</item>
