添加：colors.xml/my_style.xml--2014/12/31
1、添加：默认背景色、次级颜色
2、添加：水平、竖直等比分割style

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,5 +21,11 @@
     <color name="transDarkOliveGreen">#aa556b2f</color>
     <!-- 主题色 -->
     <color name="mainColor">#ff556b2f</color>
+    <!-- 主题背景色 -->
+    <color name="mainBgColor">#ff556b2f</color>
+    <!-- 次级色 -->
+    <color name="subColor">#ff556b2f</color>
+    <!-- 次级背景色 -->
+    <color name="subBgColor">#ff556b2f</color>
 
 </resources>
