--- a/res/values/my_styles.xml
+++ b/res/values/my_styles.xml
@@ -15,6 +15,20 @@
         <item name="android:background">@color/mainColor</item>
     </style>
 
+    <!-- vertical Space -->
+    <style name="VerticalSpace">
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <!-- Horizontal Space -->
+    <style name="HorizontalSpace">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
     <!-- match_parent -->
     <style name="MatchParent">
         <item name="android:layout_width">match_parent</item>
@@ -123,7 +137,6 @@
         <item name="android:paddingTop">@dimen/padding_small</item>
         <item name="android:paddingBottom">@dimen/padding_small</item>
     </style>
-
 
     <!-- Linear -->
     <style name="Linear" parent="TextView">
